--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -16,71 +16,29 @@
                   </p>
             </div>
         </div>
-    
+
         <!-- Header -->
-    
-    
-    
+
+
+
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
                 <div class="row">
-                    <div class="col-lg-3 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                                <mat-label class="customMatLabel">Zone</mat-label>
-                                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                                    <mat-option [value]="SelectedZones?.ZoneId">
-                                        {{SelectedZones?.ZoneName}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline"  *ngIf="!single_zone" >
-                                <mat-label class="customMatLabel">Zone</mat-label>
-                                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                                            (selectionChange)="changeZone($event)">
-                                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                                [disabled]="disable_zone">
-                                        {{zone?.ZoneName}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                                <mat-select [(ngModel)]="selected_b" formControlName="BranchId" [disabled]="disable_branch"
-                                            (selectionChange)="changeBranch($event)"
-                                            *ngIf="!single_branch">
-                                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                                    >
-                                        {{branch?.Name}}
-                                    </mat-option>
-                                </mat-select>
-                                <mat-select [(ngModel)]="selected_b" formControlName="BranchId" [disabled]="disable_branch"
-                                            *ngIf="single_branch">
-                                    <mat-option [value]="SelectedBranches?.BranchCode"
-                                    >
-                                        {{SelectedBranches?.Name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
+                    <app-zone-branch-circle [form]="customerForm" [should_show_circle]="false"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="col-lg-3 col-sm-12">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">CNIC#</mat-label>
                                 <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic"
                                        formControlName="Cnic" maxlength="13" autocomplete="off"/>
-            
+
                             </mat-form-field>
                     </div>
                     <div class="col-lg-3 kt-margin-bottom-20-mobile">
                         <input type="button" mat-raised-button color="primary"
                                class=" mat-raised-button mat-button-base mat-primary searchLCBtn mt-2 bg-gray-500" value="Find" (click)="find()"
                                [disabled]="viewOnly"/>
-        
+
                     </div>
                 </div>
             </div>
