--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -1,28 +1,11 @@
 <div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Journal Voucher</div>
     <div class="pt-4" [formGroup]="JvForm">
-        
+
 
         <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div>
-
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Zone <strong class="matMandatory">*</strong></mat-label>
-                        <input matInput placeholder="Enter Zone" formControlName="ZoneId" readonly="readonly" maxlength="30"
-                               autocomplete="off"/>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-                <div>
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                        <input matInput placeholder="Enter Branch" formControlName="OrgUnitID" readonly="readonly"
-                               maxlength="30" autocomplete="off"/>
-                    </mat-form-field>
-                </div>
-            </div>
+            <app-zone-branch-circle [form]="JvForm" [should_show_circle]="false"
+                                    (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
             <div class="col-lg-4 col-sm-12">
                 <div>
 
@@ -75,15 +58,15 @@
                         <mat-datepicker-toggle matSuffix [for]="picker2"
                                                [disabled]="submitted || transactionEdit || viewOnly"></mat-datepicker-toggle>
                         <mat-datepicker #picker2></mat-datepicker>
-        
+
                         <mat-error *ngIf="hasError('EffectiveDate', 'required')">Effective Date <strong>required</strong>
                         </mat-error>
                     </mat-form-field>
                 </div>
-        
+
             </div>
         </div>
- 
+
 
         <div class="row">
             <div class="col-lg-2 col-sm-12">
@@ -129,7 +112,7 @@
                                [disabled]="recoverySaved || transactionEdit || viewOnly" appNumberOnly/>
                         <!-- <mat-error *ngIf="hasError('Amount', 'required')">Total Amount <strong>required</strong></mat-error> -->
                         <mat-error *ngIf="hasError('Amount', 'required')">Total Amount <strong>required</strong></mat-error>
-        
+
                     </mat-form-field>
                     <mat-error *ngIf="amountError">Total Amount not more then Total OS</mat-error>
                 </div>
@@ -143,7 +126,7 @@
                                [readonly]="recoverySaved || transactionEdit || viewOnly" appNumberOnly/>
                         <mat-error *ngIf="hasError('TrCode', 'required')">Tr Code <strong>required</strong></mat-error>
                     </mat-form-field>
-        
+
                 </div>
             </div>
         </div>
@@ -173,7 +156,7 @@
                         <!-- <mat-error *ngIf="hasError('AdviceNo', 'required')">Advice No <strong>required</strong></mat-error> -->
                     </mat-form-field>
                 </div>
-        
+
                 <!-- <strong class="matMandatory">*</strong> -->
             </div>
 
@@ -232,7 +215,7 @@
                         </mat-select>
                         <!-- <mat-error *ngIf="hasError('LoanDisbID', 'required')">Disbursement ID <strong>required</strong></mat-error> -->
                     </mat-form-field>
-        
+
                     <mat-form-field *ngIf="expandDisbursement" class="mat-form-field-fluid w-11/12" appearance="outline">
                         <mat-label>Disbursement/LC GL</mat-label>
                         <mat-select formControlName="LoanDisbID" [disabled]="recoverySaved || transactionEdit || viewOnly">
@@ -297,7 +280,7 @@
 
 
         <div class="row">
-    
+
             <div class="col-lg-3 col-sm-12">
                 <div *ngIf="showInstrument">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -400,7 +383,7 @@
 
 
         <!-- <div  class="">
-            
+
         </div> -->
 
 
