--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -23,73 +23,19 @@
         <div class="card card-body">
             <div
             [formGroup]="loanutilizationSearch">
-    
-    
+
+
             <div class="row">
+                <app-zone-branch-circle [form]="loanutilizationSearch" [should_show_circle]="false"
+                                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="col-lg-3 col-sm-12">
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-    
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
-                                <mat-option [value]="SelectedZones?.ZoneId">
-                                    {{SelectedZones?.ZoneName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
-                                        (selectionChange)="changeZone($event)">
-                                <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                            [disabled]="disable_zone">
-                                    {{zone?.ZoneName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-    
-    
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12">
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                            <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                        (selectionChange)="changeBranch($event)"
-                                        *ngIf="!single_branch">
-                                <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode">
-                                    {{branch?.Name}}
-                                </mat-option>
-                            </mat-select>
-                            <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                        *ngIf="single_branch">
-                                <mat-option [value]="SelectedBranches?.BranchCode"
-                                >
-                                    {{SelectedBranches?.Name}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12">
-    
-    <!--                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-    <!--                    <mat-label class="customMatLabel">From</mat-label>-->
-    <!--                    <input matInput readonly appNumberOnly [matDatepicker]="picker" placeholder="ddMMyyyy"-->
-    <!--                           formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()">-->
-    <!--                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
-    <!--                    <mat-datepicker #picker></mat-datepicker>-->
-    <!--                </mat-form-field>-->
-    
-    
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">From </mat-label>
                         <input matInput  [matDatepicker]="picker2" formControlName="FromDate" maxlength="8"
                                autocomplete="off" [max]="getToday()" (dateChange)="setFromDate()" appNumberOnly/>
                         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                         <mat-datepicker #picker2></mat-datepicker>
-    
+
     <!--                    <mat-error *ngIf="hasError('TransactionDate', 'required')">Transaction Date <strong>required</strong>-->
     <!--                    </mat-error>-->
                     </mat-form-field>
@@ -103,20 +49,20 @@
                         <mat-datepicker #picker1></mat-datepicker>
                     </mat-form-field>
                 </div>
-    
+
             </div>
-    
-    
-    
-    
-    
-    
-    
+
+
+
+
+
+
+
     <!--            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
-    
+
     <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
     <!--                    <mat-label class="customMatLabel">Circle</mat-label>-->
-    
+
     <!--                    <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">-->
     <!--                        <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"-->
     <!--                        >-->
@@ -125,8 +71,8 @@
     <!--                    </mat-select>-->
     <!--                </mat-form-field>-->
     <!--            </div>-->
-    
-    
+
+
     <!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4" *ngIf="!isUserAdmin && !isZoneUser">-->
     <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
     <!--                    <mat-label>Branch</mat-label>-->
@@ -153,10 +99,10 @@
     <!--                    </mat-select>-->
     <!--                </mat-form-field>-->
     <!--            </div>-->
-    
-    
+
+
     <div class="row">
-    
+
         <div class="col-md-3 col-sm-12">
             <div class="col-md-12 kt-margin-bottom-10-mobile mr-4">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -166,9 +112,9 @@
                 </mat-form-field>
             </div>
         </div>
-    
+
         <div class="col-md-3 col-sm-12">
-    
+
             <div *ngIf="loanutilizationStatusLov" class="col-md-12 kt-margin-bottom-10-mobile">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label>Select loanutilization Status</mat-label>
@@ -182,8 +128,8 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-    
-    
+
+
         </div>
         <div class="col-lg-3 col-sm-12">
             <div class="flex flex-shrink-0 items-center  mb-2">
@@ -193,11 +139,11 @@
                 </button>
             </div>
         </div>
-    
-    
-    
-    
-    
+
+
+
+
+
             </div>
 
         </div>
