--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -22,82 +22,9 @@
 <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <div class="row">
-        <div class="col-md-3 col-sm-12">
-          <div class="flex flex-shrink-0 items-center ">
-  
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                  <mat-label class="customMatLabel">Zone</mat-label>
-                  <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
-                      <mat-option [value]="SelectedZones?.ZoneId">
-                          {{SelectedZones?.ZoneName}}
-                      </mat-option>
-  
-                  </mat-select>
-              </mat-form-field>
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                  <mat-label class="customMatLabel">Zone</mat-label>
-                  <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
-                              (selectionChange)="changeZone($event)">
-                      <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                  [disabled]="disable_zone">
-                          {{zone?.ZoneName}}
-                      </mat-option>
-                  </mat-select>
-              </mat-form-field>
-          </div>
-        </div>
-  
-        <div class="col-md-3 col-sm-12">
-  
-          <div class="flex flex-shrink-0 items-center">
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                  <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                  <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                              (selectionChange)="changeBranch($event)"
-                              *ngIf="!single_branch">
-                      <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                      >
-                          {{branch?.Name}}
-                      </mat-option>
-                  </mat-select>
-                  <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                              *ngIf="single_branch">
-                      <mat-option [value]="SelectedBranches?.BranchCode"
-                      >
-                          {{SelectedBranches?.Name}}
-                      </mat-option>
-                  </mat-select>
-              </mat-form-field>
-          </div>
-        </div>
-  
-  <!--      <div *ngIf="circle && isBM" class="col-md-2 kt-margin-bottom-10-mobile mr-20">-->
-  <!--        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
-  <!--          <mat-label>Circle No</mat-label>-->
-  <!--          <mat-select formControlName="CircleId">-->
-  <!--            <mat-option value="">-->
-  <!--              Select-->
-  <!--            </mat-option>-->
-  <!--            <mat-option *ngFor="let obj of circle" [value]="obj.Id">-->
-  <!--              {{obj.CircleCode}}-->
-  <!--            </mat-option>-->
-  <!--          </mat-select>-->
-  <!--        </mat-form-field>-->
-  <!--      </div>-->
-  
-  <!--                    <div  class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
-  <!--                        {{selected_c}}-->
-  <!--                        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
-  <!--                            <mat-label class="customMatLabel">Circle</mat-label>-->
-  <!--                            <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">-->
-  <!--                                <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"-->
-  <!--                                >-->
-  <!--                                    {{circle?.CircleCode}}-->
-  <!--                                </mat-option>-->
-  <!--                            </mat-select>-->
-  <!--                        </mat-form-field>-->
-  <!--                    </div>-->
-  
+          <app-zone-branch-circle [form]="utilizationSearch" [should_show_circle]="false"
+                                  (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+
   <div class="col-md-3 col-sm-12">
         <div class="col-md-12 kt-margin-bottom-10-mobile mr-20">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -121,8 +48,8 @@
             </mat-select>
           </mat-form-field>
         </div>
-  
-  
+
+
   </div>
       </div>
       <div class="row">
