--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -23,10 +23,11 @@
 
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
-                <div class="row">
+                <div class="flex" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="customerForm" [should_show_circle]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                    <div class="col-lg-3 col-sm-12">
+                        <div class="mx-2">
+                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">CNIC#</mat-label>
                                 <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic"
@@ -34,11 +35,14 @@
 
                             </mat-form-field>
                     </div>
-                    <div class="col-lg-3 kt-margin-bottom-20-mobile">
+                    </div>
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <input type="button" mat-raised-button color="primary"
                                class=" mat-raised-button mat-button-base mat-primary searchLCBtn mt-2 bg-gray-500" value="Find" (click)="find()"
                                [disabled]="viewOnly"/>
 
+                    </div>
                     </div>
                 </div>
             </div>
