--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -24,11 +24,11 @@
 
 
 
-        <div class="row">
+        <div class="flex" style="flex-wrap: wrap;">
             <app-zone-branch-circle [form]="deceasedCustomerSearch" [should_show_circle]="false"
                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-            <div class="col-lg-3 col-sm-12">
-                <div class="col-md-12 kt-margin-bottom-10-mobile">
+                <div class="mx-2">
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Cnic</mat-label>
                         <input appNumberOnly matInput formControlName="Cnic" placeholder="" maxlength="13" autocomplete="off">
@@ -52,8 +52,8 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-sm-12">
-                <div class="col-md-12 kt-margin-bottom-10-mobile">
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Customer Name</mat-label>
                         <input appAlphabetOnly matInput formControlName="CustomerName" placeholder="" maxlength="100" autocomplete="off">
@@ -62,23 +62,8 @@
                     </mat-form-field>
                 </div>
             </div>
-        <!--    <div class="col-lg-3 col-sm-12">-->
-        <!--        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-        <!--            <mat-label>Branch</mat-label>-->
-        <!--            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">-->
-        <!--            &lt;!&ndash;  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>&ndash;&gt;-->
-        <!--        </mat-form-field>-->
-        <!--    </div>-->
-
-
-        </div>
-
-
-
-        <div class="row">
-
-            <div class="col-lg-3 col-sm-12">
-                <div class="col-md-12 kt-margin-bottom-10-mobile">
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Father Name</mat-label>
                         <input appAlphabetOnly matInput formControlName="FatherName" placeholder="" maxlength="100" autocomplete="off">
@@ -86,8 +71,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div *ngIf="CustomerStatusLov"  class="col-md-12 kt-margin-bottom-10-mobile">
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;" *ngIf="CustomerStatusLov">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Customer Status</mat-label>
@@ -111,17 +96,23 @@
                 </div>
 
             </div>
-            <div class="col-lg-2 col-md-3">
-                <div class="col-lg-4 col-sm-12">
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary mat-raised-button"  [disabled]="deceasedCustomerSearch.invalid" (click)="SearchDeceasedCustomer()" color="primary" >
                         <mat-icon class="mr-2">search</mat-icon> Search
                     </button>
                 </div>
             </div>
+        <!--    <div class="col-lg-3 col-sm-12">-->
+        <!--        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+        <!--            <mat-label>Branch</mat-label>-->
+        <!--            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">-->
+        <!--            &lt;!&ndash;  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>&ndash;&gt;-->
+        <!--        </mat-form-field>-->
+        <!--    </div>-->
 
 
         </div>
-
 
 
 
