--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -24,14 +24,14 @@
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                <mat-select matInput [(ngModel)]="selected_b" formControlName="BranchCode" *ngIf="!single_zone"
+                <mat-select matInput [(ngModel)]="selected_b" formControlName="BranchCode" *ngIf="!single_branch"
                             (selectionChange)="changeBranch($event)">
                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode">
                         {{branch?.Name}}
                     </mat-option>
                 </mat-select>
 
-                <mat-select matInput [(ngModel)]="selected_b" formControlName="BranchCode" *ngIf="single_zone"
+                <mat-select matInput [(ngModel)]="selected_b" formControlName="BranchCode" *ngIf="single_branch"
                             (selectionChange)="changeBranch($event)">
                     <mat-option [value]="SelectedBranches?.BranchCode">
                         {{SelectedBranches?.Name}}
